--- a/requirements_russian.txt
+++ b/requirements_russian.txt
@@ -3,7 +3,7 @@ typing-extensions>=4.14.0
 langchain-openai>=0.3.23
 langchain-experimental>=0.3.4
 langchain-anthropic>=0.3.15
-langchain-google-genai>=2.1.5
+#langchain-google-genai>=2.1.5
 langgraph>=0.4.8
 pandas>=2.3.0
 requests>=2.32.4
